--- a/.github/workflows/update_base64.yml
+++ b/.github/workflows/update_base64.yml
@@ -37,9 +37,9 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add server_base64.txt
+          git add server_base64.txt serverlist
           if [ -n "$(git status --porcelain)" ]; then
-            git commit -m "Update server_base64.txt [skip ci]"
+            git commit -m "Update server_base64.txt and serverlist [skip ci]"
             git push
           else
             echo "没有变化，无需提交。"
