--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "update": "node updateServerBase64.js"
   },
   "dependencies": {
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "archiver": "^5.3.1",
+    "archiver-zip-encrypted": "^1.0.0"
   }
 }
