--- a/.github/workflows/update_base64.yml
+++ b/.github/workflows/update_base64.yml
@@ -39,7 +39,7 @@ jobs:
           git config --local user.name "GitHub Action"
           git add server_base64.txt serverlist
           if [ -n "$(git status --porcelain)" ]; then
-            git commit -m "Update server_base64.txt and serverlist [skip ci]"
+            git commit -m "Update server_base64.txt and serverlist.zip [skip ci]"
             git push
           else
             echo "没有变化，无需提交。"
